lib/flutter_yolo_open_kit_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for YOLO object detection native library.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class FlutterYoloOpenKitBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlutterYoloOpenKitBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlutterYoloOpenKitBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Initialize YOLO detector with model path
  /// Returns 1 on success, 0 on failure
  int yolo_init(ffi.Pointer<ffi.Char> model_path) {
    return _yolo_init(model_path);
  }

  late final _yolo_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'yolo_init',
      );
  late final _yolo_init =
      _yolo_initPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// Run detection on image file path
  /// Returns JSON string with detection results (caller must free with free_string)
  ffi.Pointer<ffi.Char> yolo_detect_path(
    ffi.Pointer<ffi.Char> image_path,
    double conf_threshold,
    double iou_threshold,
  ) {
    return _yolo_detect_path(image_path, conf_threshold, iou_threshold);
  }

  late final _yolo_detect_pathPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Float,
        ffi.Float,
      )
    >
  >('yolo_detect_path');
  late final _yolo_detect_path =
      _yolo_detect_pathPtr
          .asFunction<
            ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              double,
              double,
            )
          >();

  /// Run detection on image buffer (BGRA format from camera)
  /// Returns JSON string with detection results (caller must free with free_string)
  ffi.Pointer<ffi.Char> yolo_detect_buffer(
    ffi.Pointer<ffi.Uint8> image_data,
    int width,
    int height,
    int stride,
    double conf_threshold,
    double iou_threshold,
  ) {
    return _yolo_detect_buffer(
      image_data,
      width,
      height,
      stride,
      conf_threshold,
      iou_threshold,
    );
  }

  late final _yolo_detect_bufferPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Uint8>,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        ffi.Float,
        ffi.Float,
      )
    >
  >('yolo_detect_buffer');
  late final _yolo_detect_buffer =
      _yolo_detect_bufferPtr
          .asFunction<
            ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Uint8>,
              int,
              int,
              int,
              double,
              double,
            )
          >();

  /// Run detection on YUV420 buffer (Android camera format)
  /// rotation: 0, 90, 180, 270 degrees clockwise
  /// Returns JSON string with detection results (caller must free with free_string)
  ffi.Pointer<ffi.Char> yolo_detect_yuv(
    ffi.Pointer<ffi.Uint8> y_data,
    ffi.Pointer<ffi.Uint8> u_data,
    ffi.Pointer<ffi.Uint8> v_data,
    int width,
    int height,
    int y_row_stride,
    int uv_row_stride,
    int uv_pixel_stride,
    int rotation,
    double conf_threshold,
    double iou_threshold,
  ) {
    return _yolo_detect_yuv(
      y_data,
      u_data,
      v_data,
      width,
      height,
      y_row_stride,
      uv_row_stride,
      uv_pixel_stride,
      rotation,
      conf_threshold,
      iou_threshold,
    );
  }

  late final _yolo_detect_yuvPtr = _lookup<
    ffi.NativeFunction<
      ffi.Pointer<ffi.Char> Function(
        ffi.Pointer<ffi.Uint8>,
        ffi.Pointer<ffi.Uint8>,
        ffi.Pointer<ffi.Uint8>,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        ffi.Float,
        ffi.Float,
      )
    >
  >('yolo_detect_yuv');
  late final _yolo_detect_yuv =
      _yolo_detect_yuvPtr
          .asFunction<
            ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Uint8>,
              int,
              int,
              int,
              int,
              int,
              int,
              double,
              double,
            )
          >();

  /// Set custom class names (JSON array string)
  void yolo_set_classes(ffi.Pointer<ffi.Char> class_names_json) {
    return _yolo_set_classes(class_names_json);
  }

  late final _yolo_set_classesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'yolo_set_classes',
      );
  late final _yolo_set_classes =
      _yolo_set_classesPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Release detector resources
  void yolo_release() {
    return _yolo_release();
  }

  late final _yolo_releasePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('yolo_release');
  late final _yolo_release = _yolo_releasePtr.asFunction<void Function()>();

  /// Free allocated string
  void free_string(ffi.Pointer<ffi.Char> str) {
    return _free_string(str);
  }

  late final _free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'free_string',
      );
  late final _free_string =
      _free_stringPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Get version info
  ffi.Pointer<ffi.Char> yolo_get_version() {
    return _yolo_get_version();
  }

  late final _yolo_get_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'yolo_get_version',
      );
  late final _yolo_get_version =
      _yolo_get_versionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Check if detector is initialized
  /// Returns 1 if initialized, 0 otherwise
  int yolo_is_initialized() {
    return _yolo_is_initialized();
  }

  late final _yolo_is_initializedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('yolo_is_initialized');
  late final _yolo_is_initialized =
      _yolo_is_initializedPtr.asFunction<int Function()>();
}
